k8s/celery-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata: { name: celery-worker }
spec:
  replicas: 0 # starting from 0, will be scaled by KEDA
  selector: { matchLabels: { app: celery-worker } }
  template:
    metadata: { labels: { app: celery-worker } }
    spec:
      containers:
        - name: worker
          image: us-central1-docker.pkg.dev/georgef-sandbox/keda-celery-flask-react/api:1.0.0-dc62ee1b # same as API image (includes Celery)
          command:
            [
              "celery",
              "-A",
              "celery_app.celery",
              "worker",
              "-Q",
              "webhook",
              "--loglevel=INFO",
            ]
          resources:
            requests: { cpu: "100m", memory: "128Mi" }
            limits: { cpu: "1", memory: "512Mi" }
