k8s/web.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  annotations:
    # cloud.google.com/backend-config: '{"default": "web-backend-config"}'
spec:
  type: NodePort
  ports: [{ port: 80, targetPort: 80, nodePort: 30081 }]
  selector: { app: web }
---
apiVersion: apps/v1
kind: Deployment
metadata: { name: web }
spec:
  replicas: 1
  selector: { matchLabels: { app: web } }
  template:
    metadata: { labels: { app: web } }
    spec:
      containers:
        - name: web
          image: us-central1-docker.pkg.dev/georgef-sandbox/keda-celery-flask-react/web:1.0.0-c097a5a0
          ports: [{ containerPort: 80 }]
          volumeMounts:
            - name: nginx-config-volume
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: nginx.conf
              readOnly: true
      volumes:
        - name: nginx-config-volume
          configMap:
            name: nginx-config
            items:
              - key: nginx.conf
                path: nginx.conf
